############################################################################
# Tests/Functional/Core/CMakeLists.txt
############################################################################

# testing fitting via FitSuite
add_subdirectory(FitSuite)

# testing standalone fitting of arbitrary objective functions
add_subdirectory(Minimizer)

